# ipo-s1-analyst

./: .env.example  .gitignore  CLAUDE.md  HUMAN_IN_THE_LOOP.md  INSTRUCTIONS.md  LICENSE  README.md  cli.py  config.py  pyproject.toml
.github/workflows/: ci.yml
agent/: __init__.py  analyzer.py  fetcher.py  orchestrator.py  parser.py  reporter.py  risk_scorer.py  tools.py  valuation.py
examples/: spacex_analysis.md
prompts/: report_template.md  system_prompt.md
tests/: test_analyzer.py  test_fetcher.py  test_parser.py  test_pipeline.py  test_reporter.py  test_risk_scorer.py  test_valuation.py
tests/fixtures/: sample_s1_excerpt.html
